[package]
name = "lumin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
liquid = { version = "0.26.4", features = ["stdlib", "liquid-lib"] }
markdown = "1.0.0-alpha.11"
mime_guess = "2.0.4"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.174", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
toml = "0.7.6"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "lumin"
path = "src/lib.rs"

[[bench]]
name = "store"
harness = false
