[package]
name = "lumin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
html-escape = "0.2.13"
liquid = { version = "0.26.4", features = ["stdlib", "liquid-lib"] }
markdown = "1.0.0-alpha.11"
mime_guess = "2.0.4"
notify-debouncer-full = { version = "0.2.0", default-features = false }
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.9.1"
serde = { version = "1.0.174", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
toml = "0.7.6"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cc="*"

[lib]
name = "lumin"
path = "src/lib.rs"

[[bench]]
name = "store"
harness = false
